--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 # Ignore the default SQLite database.
 #/db/*.sqlite3
+/db/test.sqlite3
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
@@ -16,3 +17,6 @@
 
 # Ignore .DS_Store
 **.DS_Store
+
+# Ignore config file to protect my email credentials
+#/config/environments/development.rb
